--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/Logs/
+*.log
+
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
@@ -35,3 +38,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.log
+
+# Added by scew
