--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ sysinfo.txt
 # Added by scew
 UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/default-2021.dwlt
+UserSettings/EditorUserSettings.asset
